# itzam

./: ChangeLog  Makefile.am  README  cleanup  configure.ac  itzamdoc.html  libitzam.pc  optinstall
src/: Makefile.am  itzam.h  itzam_btree.c  itzam_data.c  itzam_util.c
test/: Makefile.am  befaft.c  cursor.c  insert.c  itzam_btree_test_befaft.c  itzam_btree_test_cursor.c  itzam_btree_test_insert.c  itzam_btree_test_overwrite.c  itzam_btree_test_stress.c  itzam_btree_test_strvar.c  itzam_btree_test_threads.c  overwrite.c  stress.c  strvar.c  threads.c
